--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.18",
+    "@types/mongoose": "^5.11.97"
   }
 }
