--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "mongoose": "^7.4.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.18",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/mongoose": "^5.11.97"
